Bugzilla bug 231195: fixed the crash in PR_LogCleanup if NSPR_LOG_FILE is set to WinDebug.  Thanks to timeless@bemail.org for the patch. r=wtc.